Attempt 3 to fix hero content on mobile:

--- a/src/scss/Home.scss
+++ b/src/scss/Home.scss
@@ -371,6 +371,7 @@ h3 {
 
 @media (max-width: 425px) {
   .hero {
+    height: auto;
     min-height: 100vh;
   }
 
